--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,16 @@ before_install:
 
 script: 
     - docker run -e CI=true hen2864/docker-react npm run test
+
+deploy:
+    provider: elasticbeanstalk
+    region: "eu-central-1"
+    app: "docker"
+    env: "Docker-env"
+    bucket_name: "elasticbeanstalk-eu-central-1-263242118724" 
+    bucket_path: "docker"
+    on:
+        branch: master
+        
+
     
